[gd_scene load_steps=34 format=3 uid="uid://q3u4dlh6wo3x"]

[ext_resource type="Texture2D" uid="uid://c2n75ywdx865y" path="res://assets/backgrounds/judgesSide.png" id="1_fpxtb"]
[ext_resource type="Script" path="res://scenes/scene4.gd" id="1_pa1uf"]
[ext_resource type="Texture2D" uid="uid://rij6pq1l6equ" path="res://assets/sprites/rain-sprite.png" id="3_hhee6"]
[ext_resource type="Texture2D" uid="uid://dvu0vh0ulmn3u" path="res://assets/sprites/elay_sprites.png" id="3_l0yr0"]
[ext_resource type="Texture2D" uid="uid://1l03kq0eie04" path="res://assets/backgrounds/witness-stand.png" id="4_2da0s"]
[ext_resource type="Texture2D" uid="uid://dp66xco4vbvku" path="res://assets/sprites/sunny-sprite.png" id="4_hsc4d"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="5_e83at"]
[ext_resource type="Texture2D" uid="uid://bhn534hh0wssh" path="res://assets/sprites/judge-sprite.png" id="5_f21cp"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="6_g4gqo"]
[ext_resource type="PackedScene" uid="uid://bwo7hmrw6dsbj" path="res://inventory/inventory_ui.tscn" id="7_mii3a"]
[ext_resource type="AudioStream" uid="uid://dx6vblsbtd8lw" path="res://audio/blip.mp3" id="8_xilhb"]
[ext_resource type="AudioStream" uid="uid://co66kk6avp7av" path="res://audio/typewriter.mp3" id="9_lri15"]

[sub_resource type="Animation" id="Animation_a6o8o"]
resource_name = "blinking"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_xohpg"]
resource_name = "talking"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4r8cx"]
_data = {
"blinking": SubResource("Animation_a6o8o"),
"talking": SubResource("Animation_xohpg")
}
[ext_resource type="AudioStream" uid="uid://lgqvm66avndo" path="res://assets/music/whip.mp3" id="12_2p6hr"]

[sub_resource type="Animation" id="Animation_sjpap"]
resource_name = "Blinking"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 3, 2, 3]
}

[sub_resource type="Animation" id="Animation_olobw"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.2001, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 4, 0, 1]
}

[sub_resource type="Animation" id="Animation_b2ai6"]
resource_name = "Table_Whip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_qlcie"]
resource_name = "Suspicious_Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.4001, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1.03526, 1, 1, 1.03526, 1),
"update": 1,
"values": [60, 68, 71, 69, 68, 71]
}

[sub_resource type="Animation" id="Animation_3m1ap"]
resource_name = "Suspicious_Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 1, 0, 1, 0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgmlq"]
_data = {
"Blinking": SubResource("Animation_sjpap"),
"Suspicious_Blinking": SubResource("Animation_3m1ap"),
"Suspicious_Talking": SubResource("Animation_qlcie"),
"Table_Whip": SubResource("Animation_b2ai6"),
"Talking": SubResource("Animation_olobw")
}

[sub_resource type="Animation" id="Animation_qhkb8"]
resource_name = "NormalTalk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [12, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ru1pl"]
resource_name = "Blinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfpy1"]
_data = {
"Blinking": SubResource("Animation_ru1pl"),
"NormalTalk": SubResource("Animation_qhkb8")
}

[sub_resource type="Animation" id="Animation_c3bkp"]
resource_name = "worried"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [108, 110, 111]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jf44v"]
_data = {
"worried": SubResource("Animation_c3bkp")
}

[sub_resource type="Animation" id="Animation_xnak8"]
resource_name = "Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.7001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 9, 0]
}

[sub_resource type="Animation" id="Animation_x823a"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_4gmpx"]
resource_name = "Talking2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pi1fh"]
_data = {
"Blinking": SubResource("Animation_xnak8"),
"Talking": SubResource("Animation_x823a"),
"Talking2": SubResource("Animation_4gmpx")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqnue"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dvsrc"]
texture = ExtResource("6_g4gqo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mmqny"]
texture = ExtResource("6_g4gqo")
modulate_color = Color(0.836576, 0.711346, 0.605006, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vht6b"]
texture = ExtResource("6_g4gqo")
modulate_color = Color(0.541247, 0.291974, 0.221316, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4uxdk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dmq2p"]

[node name="Node2D" type="Node2D"]

[node name="scene4" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pa1uf")

[node name="Background" type="TextureRect" parent="scene4"]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("1_fpxtb")

[node name="ElaySprite" type="Sprite2D" parent="scene4"]
position = Vector2(982, 486)
scale = Vector2(1.08691, 1.07984)
texture = ExtResource("3_l0yr0")
hframes = 7
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="scene4/ElaySprite"]
libraries = {
"": SubResource("AnimationLibrary_4r8cx")
}

[node name="sunny_sprite" type="Sprite2D" parent="scene4"]
position = Vector2(1312, 520.825)
scale = Vector2(1.64267, 1.58515)
texture = ExtResource("4_hsc4d")
hframes = 12
vframes = 15
frame = 12

[node name="sunny_sprite_animation" type="AnimationPlayer" parent="scene4/sunny_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pgmlq")
}

[node name="sunny_sprite_animation2" type="AnimationPlayer" parent="scene4/sunny_sprite"]
libraries = {
"": SubResource("AnimationLibrary_yfpy1")
}

[node name="rain_sprite" type="Sprite2D" parent="scene4"]
position = Vector2(676.25, 584.302)
scale = Vector2(1.59133, 1.53609)
texture = ExtResource("3_hhee6")
hframes = 12
vframes = 14
frame = 111

[node name="rain_sprite_animation" type="AnimationPlayer" parent="scene4/rain_sprite"]
libraries = {
"": SubResource("AnimationLibrary_jf44v")
}

[node name="judge_sprite" type="Sprite2D" parent="scene4"]
position = Vector2(978.462, 434.294)
scale = Vector2(1.35481, 1.36604)
texture = ExtResource("5_f21cp")
hframes = 10
vframes = 5

[node name="judge_sprite_animation" type="AnimationPlayer" parent="scene4/judge_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pi1fh")
}

[node name="stand" type="TextureRect" parent="scene4"]
visible = false
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("4_2da0s")

[node name="DialogueBoxButton" type="Button" parent="scene4"]
layout_mode = 0
offset_left = -1932.0
offset_top = 803.0
offset_right = -1924.0
offset_bottom = 811.0
scale = Vector2(1567.73, 159.941)
theme_override_styles/focus = SubResource("StyleBoxEmpty_yqnue")

[node name="DialogueBox" type="Polygon2D" parent="scene4"]
position = Vector2(-9, 0)
scale = Vector2(1.02753, 0.99655)
color = Color(0.168627, 0.168627, 0.168627, 0.470588)
polygon = PackedVector2Array(3, 803, 1951, 803, 1951, 1123, 3, 1123)

[node name="PersonNameBox" type="Polygon2D" parent="scene4"]
position = Vector2(145, 763)
scale = Vector2(0.807388, 0.375424)
color = Color(0.48825, 0.315, 0.7, 0.917647)
polygon = PackedVector2Array(-0.199969, 1.66217, 1.67047, -2.6637, 310.698, -2.6637, 365.822, 98.5553, 306.562, 188.651, 152.066, 188.651, -0.973211, 188.651, -60.1351, 90.5643)

[node name="DialogueText" type="Label" parent="scene4"]
layout_mode = 0
offset_left = 219.0
offset_top = 858.0
offset_right = 667.0
offset_bottom = 924.0
scale = Vector2(3.32776, 3.02778)
theme_override_fonts/font = ExtResource("5_e83at")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PersonNameText" type="Label" parent="scene4"]
layout_mode = 0
offset_left = 160.0
offset_top = 780.0
offset_right = 254.0
offset_bottom = 801.0
scale = Vector2(2.31653, 2.09949)
theme_override_fonts/font = ExtResource("5_e83at")
metadata/_edit_use_anchors_ = true

[node name="CourtRecordButton" type="Button" parent="scene4"]
layout_mode = 0
offset_left = 1478.0
offset_top = -16.0
offset_right = 1597.0
offset_bottom = 9.0
scale = Vector2(3.82134, 4.93538)
theme_override_fonts/font = ExtResource("5_e83at")
theme_override_styles/normal = SubResource("StyleBoxTexture_dvsrc")
theme_override_styles/hover = SubResource("StyleBoxTexture_mmqny")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vht6b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4uxdk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dmq2p")

[node name="CourtRecordText" type="Label" parent="scene4/CourtRecordButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097823
anchor_top = -0.0529059
anchor_right = 0.0978255
anchor_bottom = -0.0529059
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(0.689314, 0.523945)
theme_override_fonts/font = ExtResource("5_e83at")
text = "Court Record"
metadata/_edit_use_anchors_ = true

[node name="Inventory_UI" parent="scene4" instance=ExtResource("7_mii3a")]
visible = false
script = null

[node name="blip" type="AudioStreamPlayer2D" parent="scene4"]
stream = ExtResource("8_xilhb")
volume_db = 6.559

[node name="typewrite" type="AudioStreamPlayer2D" parent="scene4"]
stream = ExtResource("9_lri15")
volume_db = 5.943

[node name="whip" type="AudioStreamPlayer2D" parent="scene4"]
position = Vector2(0, -106)
stream = ExtResource("12_2p6hr")
volume_db = 24.0
